# credit-risk-prediction

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
models/: best_model.pkl
reports/: model_comparison.csv  shap_feature_importance.csv  test_predictions.csv  training_summary.json
src/: evaluate.py  preprocess.py  train_model.py
src/credit_risk/: __init__.py  data.py  explain.py  features.py  modeling.py  predict.py  train.py
tests/: test_core.py
